--- a/nginx/conf/defaultautossl.conf.tmpl
+++ b/nginx/conf/defaultautossl.conf.tmpl
@@ -22,8 +22,8 @@ server {
 
 server {
     listen       80;
-    server_name  localhost;
-
+    server_name  www.nhiproject.com;
+    return 301 https://www.nhiproject.com;
     #charset koi8-r;
     access_log /dev/stdout;
     error_log /dev/stderr debug;
