--- a/nginx/conf/defaultselfssl.conf.tmpl
+++ b/nginx/conf/defaultselfssl.conf.tmpl
@@ -22,7 +22,7 @@ server {
 
 server {
     listen       80;
-    server_name  localhost;
+    server_name  www.nhiproject.com;
 
     #charset koi8-r;
     access_log /dev/stdout;
